--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -17,14 +17,14 @@ footer {
             display: flex;
             justify-content: space-between;
 
-            @media screen and (max-width: $phone) {
+            @media screen and (min-width: $phone) {
                 flex-wrap: wrap;
             }
 
             .footer__item {
                 color: white;
 
-                @media screen and (max-width: $phone) {
+                @media screen and (min-width: $phone) {
                     margin-top: 10px;
                     width: 100%;
                 }
