--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -97,9 +97,9 @@
     background-color: $quinary-color;
 
     .restaurants__block {
-        max-width: 1350px;
+        border: 2px rgb(96,136,168);
         padding: 40px 0 40px 0;
-        margin: auto;
+        
     
         .restaurants__title {
             margin: 0 20px 10px 20px;
@@ -109,6 +109,9 @@
         .restaurants__items {
             background-color: $quinary-color;
             display: flex;
+            flex-wrap: wrap;
+            }
+
 
             @media screen and (max-width: $tablet) {
                 flex-wrap: wrap;
@@ -118,12 +121,16 @@
                 background-color: white;
                 border-radius: 20px;
                 height: 250px;
-                width: 100%;
-                margin: 20px;
+                width: 40%;
+                margin: 10px;
+                margin-left: auto;
+                margin-right: auto;
                 box-shadow: 0 0 16px 0 rgba(119, 119, 119, 0.3);
 
-                @media screen and (max-width: $tablet) {
+                @media screen and (min-width: $tablet) and (max-width: $tablet) {
                     margin-bottom: 0;
+                    width: 40%;
+                    box-sizing: border-box;
                 }
 
                 .restaurants__img {
@@ -169,4 +176,3 @@
             }
         }
     }
-}
